   and 'Sigma Value'. The first specifies if the border is the FWHM or based on a user
   specified Sigma value. The latter specifies what Sigma value should be used, if the first
   is set to Sigma.

24 November 2017
 - Fixed a bug that caused a peak to be shifted if there were more than 2 peaks overlapping.
   This was caused by the i['Peak'] value no longer being in the middle of i['Data'] after
   the border was changed. The fix was to always compare to relevant border of i['Data'] to
   i['Peak'] rather than the two opposite ends of i['Data'].
 - Applied the above mentioned fix on the generated peak list as well.

4 December 2017
 - Restructured batchQuantifyChrom function in batchFunctions.py to enable better try and 
   except usage. This restructuring solved several issues that were plagueing HappyTools.
 - Fixed potential ZeroDivisionErrors that could occur in the batchQuantifyChrom function.
 - FitPack errors deriving from trying to fit a function on too little datapoints can no
   longer occur.

12 December 2017
 - Implemented basic calibrant determination to peakDetection function.
 - Sigma returned by curve_fit & gaussFunction could be negative, leading to some peaks
   not showing up in peakDetection. This was fixed by always taking the absolute value   
   of the sigma.

15 December 2017
 - Adjusted the Gaussian fitting code to determine an initial sigma instead of hard coding
   it to 0.1 as per a suggestion made by `Crazy Ivan` on SO. The change is based on the
   following assumption: The idea is that within one standard deviation of the mean, the 
   values of the Gaussian are greater than np.exp(-0.5) times the maximum value. So the 
   first line locates this "peak" and the second takes half of its width as the guess for 
   sigma.

31 January 2018
 - Fixed a bug that could occur during automatic peak detection when the peak value does
   not match the actual data.